***********************************
CHANGES IN VERSION 2.7.4b

NEW FEATURES

    o Support for LSF scheduler thanks to J. Phlipps-Cremins

BUG FIXES

    o Fix bug when fastq.gz files are processed without parallel mode but using a cluster

***********************************
CHANGES IN VERSION 2.7.3b

BUG FIXES

   o Bug fixed if space in the configuration file

   o Bug fixed in plot_pairing_portion.R (pull request M. Blum)

   o Update samtools sort for compatibility with version >1.1

SIGNIFICANT USER-VISIBLE CHANGES

   o Update python access in utils (pull request D. Vanichkina)

   o Update iced version (0.2.1 official release)

***********************************
CHANGES IN VERSION 2.7.2b

NEW FEATURES

   o HiC-Pro is now compatible with the HiCPlotter viewer (see https://github.com/kcakdemir/HiCPlotter)

   o Add support for the SLURM scheduler thanks to A. D'Ippolito !

   o Add support for the SGE scheduler thanks to G. Li !

SIGNIFICANT USER-VISIBLE CHANGES

   o be careful - configuration files for installing and running HiC-Pro have been updated to manage multiple schedulers !



***********************************
CHANGES IN VERSION 2.7.1

NEW FEATURES

   o Add new stepwise option "merge_persample". Migth be useful in some case to merge the different samples and remove the duplicates if specified in the config files. This step is also run in the "build_contact_map" steps, before generating the contact maps.

   o Can now generate raw contact maps at the restriction fragment resolution (build_matrix v1.2). To do so, specified a BIN_SIZE=-1. Note that in pratice ICE will be run on these matrices too although its assumption of the equal visibility across bins may require further exploration in the present case.

   o New version of the iced package 0.2.1

SIGNIFICANT USER-VISIBLE CHANGES
