@@ -5,8 +5,13 @@ NEW FEATURES
 
     o Support for LSF scheduler thanks to J. Phlipps-Cremins
 
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o Additional checks on input files to report more "user-friendly" errors
+
 BUG FIXES
 
+    o Fix bugs in singleton and multiple hits reporting
     o Fix bug when fastq.gz files are processed without parallel mode but using a cluster
 
 ***********************************
